[tool.poetry]
name = "canopy-monitor"
version = "0.1.0"
description = "Tool for monitoring Canopy connectors"
authors = ["Ona Engineering <tech@ona.io>"]
license = "Apache-2"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
loguru = "^0.5.3"
typer = {extras = ["all"], version = "^0.3.2"}
JSONBender = "^0.9.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.9.3"
flake8 = "^3.8.4"
flake8-isort = "^4.0.0"
coverage = "^5.3.1"
autopep8 = "^1.5.4"
pydocstyle = "^5.1.1"
mypy = "^0.790"
ipdb = "^0.13.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
